# attention-is-all-you-need

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_run  LICENSE  README.md  install.sh  optim.py  performance_test.py  pyproject.toml  run_scripts.sh  scheduler.py  transformers.ipynb
.ipynb_checkpoints/: optim-checkpoint.py  transformers-checkpoint.ipynb
attention-is-all-you-need/: attention.py  encoding.py  layers.py  model.py  models.py  transformers.ipynb
configs/: conf.json
transformer/: bpe_tokenizer_37k.json  data.py  dataset.py  datasets.py  encoding.py  options.py  run.py  scheduler.py  train_options.py  utils.py
transformer/architecture/: attention.py  encoding.py  layers.py  models.py
visualiz/: plot__seq_length.py  pos_encoding.py  utils.py
