[project]

name = "transformers"
version = "1.0.0"
description = "Attention is all you need"
authors = [
    {name = "Imahn Shekhzadeh", email = "imahn.shekhzadeh@posteo.de"},
]
license = {text = "MIT license"}
requires-python = ">=3.10"

dependencies = [
    "matplotlib~=3.2",
    "seaborn~=0.13",
    "pytorch-lightning~=2.1",
]

[tool.isort]

profile="black"
line_length=79
# necessary to get `isort` working in Docker container:
overwrite_in_place=true
known_first_party = ["attention", "layers", "models"]

[tool.black]
line-length = 79
exclude = "setup.py"
