[project]

name = "transformers"
version = "1.0.0"
description = "Attention is all you need"
authors = [
    {name = "Imahn Shekhzadeh", email = "imahn.shekhzadeh@posteo.de"},
]
license = {text = "MIT license"}
requires-python = ">=3.10"

dependencies = [
    "isort~=5.12",
    "black~=23.10",
    "wandb~=0.16",
    "prettytable~=3.9",
    "portalocker>=2.0.0",
    "matplotlib~=3.2",
    "seaborn~=0.13",
    "torchinfo~=1.8",
    "datasets~=2.17",
    "tokenizers~=0.15",
    "torch~=2.1.0",
    "torchtext~=0.16",
    "evaluate~=0.4",
    "tiktoken~=0.6",
]

[tool.isort]

profile="black"
line_length=79
# necessary to get `isort` working in Docker container:
overwrite_in_place=true
known_first_party = ["architecture", "attention", "layers", "models", "options"]
known_third_party = ["wandb"]

[tool.black]
line-length = 79
exclude = "setup.py"
